--- a/css/components/header.css
+++ b/css/components/header.css
@@ -22,7 +22,8 @@ header .header__right .header__image {
   line-height: 0;
 }
 
-header .header__right .header__image::after {
+/*
+ header .header__right .header__image::after { 
   content: '';
   display: block;
   width: 100%;
@@ -33,7 +34,7 @@ header .header__right .header__image::after {
   right: -1.5rem;
   border-radius: 0.5rem;
   z-index: -1;
-}
+}*/
 
 header .header__right .header__image .lucas {
   border-radius: 0.5rem;
