--- a/css/components/header.css
+++ b/css/components/header.css
@@ -36,7 +36,7 @@ header .header__right .header__image {
   z-index: -1;
 }*/
 
-header .header__right .header__image .lucas {
+header .header__right .header__image .jonas {
   border-radius: 0.5rem;
   min-width: 25rem;
   max-width: 100%;
