criando o botão dark

--- a/css/extends.css
+++ b/css/extends.css
@@ -1,5 +1,6 @@
 @import './variables.css';
 @import './globals.css';
+@import './mododark.css';
 
 @import './components/navbar.css';
 @import './components/header.css';
