--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,6 +2,10 @@ footer {
   background-color: var(--light-tertiary-color);
 }
 
+footer.dark{
+  background-color: black;
+}
+
 footer .footer__content {
   text-align: center;
   padding: 6rem 2rem 1rem;
