--- a/css/mododark.css
+++ b/css/mododark.css
@@ -1,6 +1,9 @@
+
+
 .trilho{
     width: 40px;
     height: 20px;
+    margin: 12px;
     background-color: var(--tertiary-color);
     border-radius: 150px;
     position: relative;
@@ -14,8 +17,27 @@
     border-radius: 50%;
     transform: scale(.9);
     position: absolute;
+    left: 0;
+    transition: 0.4s;
+  }
+
+  .trilho.dark{
+    background-color: aliceblue;
   }
   
   .trilho.dark .indicador{
    left: 20px;
+   background-color: var(--tertiary-color);
   }
+
+  body.dark{
+    background-color: rgba(0, 0, 0, 0.704);
+    color: var(--white)
+  }
+
+
+  .navbar.dark{
+    background-color: rgb(181, 121, 121);
+    color: white;
+  }
+
